--- a/styles.css
+++ b/styles.css
@@ -6,10 +6,22 @@ body {
 	background: #d1dedd;
 }
 
+article img,
+article.featured img {
+	width: 100%;
+	border: 4px solid #fff;
+	border-radius: 8px;
+}
+
+/* TYPOGRAPHY */
 ul,
 li {
 	padding: 0;
 	list-style-type: none;
+}
+
+header > h1 {
+	text-transform: uppercase;
 }
 
 h1,
@@ -20,4 +32,34 @@ h3 {
 
 p {
 	color: #828b8a;
+}
+
+/* LAYOUT */
+header {
+	max-width: 1200px;
+	margin: 2.5em auto;
+	border-bottom: 1px solid #bbc7c7;
+}
+
+.grid-container {
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	gap: 60px;
+	max-width: 1200px;
+	margin: 1.25em auto;
+}
+
+article.featured {
+	grid-column: span 3;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	gap: 60px;
+	align-items: center;
+	border-bottom: 1px solid #bbc7c7;
+	padding-bottom: 2.5em;
+}
+
+article p,
+article h3 {
+	margin: 1.25em 0.625em;
 }
