--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,17 @@ li {
 }
 
 header > h1 {
+	font-size: 2.8rem;
 	text-transform: uppercase;
+	text-align: center;
+	margin: 0;
+}
+
+header > p {
+	font-size: 1.2rem;
+	text-align: center;
+	padding-bottom: 1.8em;
+	margin: 0;
 }
 
 h1,
@@ -62,4 +72,31 @@ article.featured {
 article p,
 article h3 {
 	margin: 1.25em 0.625em;
+}
+
+footer {
+	text-align: center;
+	max-width: 100vw;
+	margin: 2.5em auto;
+	border-top: 1px solid #bbc7c7;
+	bottom: 0;
+}
+
+footer p {
+	padding-top: 1.25em;
+}
+
+footer a {
+	color: #828b8a;
+	text-decoration: none;
+	cursor: pointer;
+}
+
+footer a:hover,
+footer a:focus {
+	text-decoration: underline;
+}
+
+/* RESPONSIVE LAYOUT */
+@media (max-width: 980px) {
 }
