--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;500;600;800&family=VT323&display=swap");
 
 body {
-	margin: 1.25em;
+	margin: 1.25em 2.5em;
 	font-family: "Poppins";
 	background: #d1dedd;
 }
@@ -30,7 +30,7 @@ header > h1 {
 header > p {
 	font-size: 1.2rem;
 	text-align: center;
-	padding-bottom: 1.8em;
+	padding-bottom: 2em;
 	margin: 0;
 }
 
@@ -38,6 +38,7 @@ h1,
 h2,
 h3 {
 	color: #767f7e;
+	letter-spacing: 1.2;
 }
 
 p {
@@ -99,4 +100,41 @@ footer a:focus {
 
 /* RESPONSIVE LAYOUT */
 @media (max-width: 980px) {
+	article.featured {
+		display: block;
+		margin: 0;
+	}
+
+	article.featured img {
+		display: block;
+		width: 70%;
+		margin: 0 auto;
+	}
+
+	article.featured h2,
+	article.featured p {
+		text-align: center;
+		padding: 0 20vw;
+	}
+
+	article p,
+	article h2,
+	article h3 {
+		margin: 1.25em 0 0 0;
+	}
+
+	article {
+		grid-column: span 3;
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+		gap: 60px;
+		align-items: center;
+	}
 }
+
+/* @media (max-width: 768px) {
+	article,
+	article.featured {
+		display: block;
+	}
+} */
