--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@ body {
 article img,
 article.featured img {
 	width: 100%;
+
 	border: 4px solid #fff;
 	border-radius: 8px;
 }
@@ -77,7 +78,6 @@ article h3 {
 
 footer {
 	text-align: center;
-	max-width: 100vw;
 	margin: 2.5em auto;
 	border-top: 1px solid #bbc7c7;
 	bottom: 0;
@@ -132,9 +132,19 @@ footer a:focus {
 	}
 }
 
-/* @media (max-width: 768px) {
+@media (max-width: 768px) {
 	article,
 	article.featured {
 		display: block;
 	}
-} */
+
+	article.featured img {
+		width: 100%;
+	}
+
+	article.featured h2,
+	article.featured p {
+		text-align: left;
+		padding: 0;
+	}
+}
